[project]
name = "htx-xdata-pyspark"
version = "0.1.0"
description = "HTX xData Technical Test – PySpark RDD solution"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyspark==3.5.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "docs", "venv", ".venv"]
